# EscapeRoom

./: .gitignore  .vscodeWindows.rar  CMakeLists.txt  Kconfig  Kconfig.defconfig  erase2.uf2  erase3.uf2  forwarding.sh  gate.h  lcdFun.uf2  ledandkeys.cpp  mqttMessages.txt  numbersGuessing.h  prj.conf  rainbow.c  sample.yaml  zephyr-windows.code-workspace
boards/: common.overlay  rpi_pico.conf  rpi_pico.overlay  rpi_pico_rp2040_w.conf  rpi_pico_rp2040_w.overlay
docs/: 7 seg featherwing rev A.sch  mqtt packets.docx
drivers/: CMakeLists.txt  Kconfig  i2c_dw.c
drivers/gpio/: CMakeLists.txt  Kconfig  gpio_595.c
drivers/tcs34725/: CMakeLists.txt  Kconfig  Kconfig.tcs34725
dts/bindings/: aasd-servo.yaml  ams,tcs34725.yaml  nxp,pn532.yaml  power-switch.yaml  (+4 more)
inc/: 7304d2.h  AccelStepper.h  Adafruit_TCS34725.h  FourBitLedDigitalTube.h  Rc522.h  Wiegand.h  aasdDriver.h  adcs.h  blinds.h  business.h  cabinet.h  colorTubes.h  config.h  configDevice.h  console.h  dhcpClient.h  disc.h  display24.h  display4ht16k33.h  display8.h  display8ht16k33.h  dnsResolver.h  door.h  doorKeypad.h  drawers.h  entranceDoor.h  exitDoor.h  fridge.h  gate.h  hartMonitor.h  heart.h  heartBox.h  heartMonitor.h  hx711Weight.h  keypad.h  keypad34.h  keypad43.h  laboratory.h  lcd.h  ledStrip.h  (+24 more)
otherFiles/: display8.cpp  led_strip.h  numbersGuessing.cpp  ws2812_gpio.c  ws2812_i2s.c  ws2812_rpi_pico_pio.c  ws2812_spi.c
src/: AccelStepper.cpp  Adafruit_TCS34725.cpp  FourBitLedDigitalTube.cpp  Wiegand.cpp  aasdDriver.cpp  adcs.cpp  blinds.cpp  bram.c  business.cpp  cabinet.cpp  colorTubes.cpp  configDevice.cpp  console.cpp  dhcpClient.c  disc.cpp  display24.cpp  display4ht16k33.cpp  display8.cpp  display8ht16k33.cpp  dnsResolver.c  door.cpp  doorKeypad.cpp  drawers.cpp  entranceDoor.cpp  exitDoor.cpp  fridge.cpp  gate.cpp  hardMonitor.cpp  heart.cpp  heartBox.cpp  heartMonitor.cpp  hx711Weight.cpp  keypad.c  keypad.cpp  keypad34.cpp  keypad43.cpp  laboratory.cpp  lcd.c  lcd.cpp  ledStrip.cpp  (+26 more)
zephyr/: module.yml
